--- a/index.html
+++ b/index.html
@@ -8,104 +8,108 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <img class="logo" src="./asset/svg/Logo-fin.svg" alt="logo">
-            <div class="nav-flex">
+    <header id="header">
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="./asset/svg/Logo-fin.svg"/>
+                </div>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#support">Support</a></li>
-                    
+                    <li><a href="#" class="btn-download">Download</a></li>
                 </ul>
-                <a href="#" class="btn-download">Download</a>
-            </div>
-        </nav>
-        <div id="heading">
-            <div class="heading-content">
-                <h1>Lorem Ipsum is simply <br />dummy text of the printing and</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. <br />
-                    Lorem Ipsum has been the industry's standard dummy text
-                    ever since the 1500s, when an unknown</p>
-                <a href="#" class="btn-download">Download</a>
-            </div>
-            <div class="heading-image">
-                <img src="./asset/img/hero_cat.png" alt="Hero Cat">
-            </div>
+            </nav>
         </div>
     </header>
 
     <main>
+        <section id="hero">
+            <div class="container hero-grid">
+                <div class="hero-content flex flex-column">
+                    <h1>Lorem Ipsum is simply<br /> dummy text of the printing and</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. <br/>
+                        Lorem Ipsum has been the industry's standard dummy text
+                        ever since the 1500s, when an unknown</p>
+                    <a href="#" class="btn-download">Download</a>
+                </div>
+                <div class="hero-image">
+                    <img src="./asset/img/intro_cat.png" alt="intro cat">
+                </div>
+            </div>
+        </section>
+
         <section id="features">
-            <div class="feature">
-                <img src="./asset/img/feature_cat.png" alt="Feature Cat">
-                <div class="feature-content">
-                    <h1>Lorem Ipsum is simply dummy text of the printing and dummy text</h1>
+            <div class="container feature grid spacebetween">
+                <img src="./asset/img/feature_cat.png" alt="feature cat">
+                <div class="feature-content flex flex-column">
+                    <h2>Lorem Ipsum is simply<br /> dummy text of the printing and dummy text</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
             </div>
         </section>
 
         <section id="gallery">
-            <h1>dummy text of the printing and dummy</h1>
-            <p class="gallery-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br />
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
-            <div class="gallery-grid">
-                <img src="./asset/img/gallery_cat1.png" alt="Cat 1">
-                <img src="./asset/img/gallery_cat2.png" alt="Cat 2">
-                <img src="./asset/img/gallery_cat3.png" alt="Cat 3">
-                <img src="./asset/img/gallery_cat4.png" alt="Cat 4">
-                <img src="./asset/img/gallery_cat5.png" alt="Cat 5">
-                <img src="./asset/img/gallery_cat6.png" alt="Cat 6">
+            <div class="container flex flex-column">
+                <h2>dummy text of the printing and dummy</h2>
+                <p>Lorem Ipsum is simply <span>dummy text</span> of the printing and typesetting industry. <br />
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
+                <div class="gallery-grid spacebetween">
+                    <img src="./asset/img/gallery_cat1.png" alt="Cat 1">
+                    <img src="./asset/img/gallery_cat2.png" alt="Cat 2">
+                    <img src="./asset/img/gallery_cat3.png" alt="Cat 3">
+                    <img src="./asset/img/gallery_cat4.png" alt="Cat 4">
+                    <img src="./asset/img/gallery_cat5.png" alt="Cat 5">
+                    <img src="./asset/img/gallery_cat6.png" alt="Cat 6">
+                </div>
+                <div class="gallery-show">
+                    <p>Continue exploring HODU</p>
+                    <a href="#" class="btn-more">Show more</a>
+                </div>
             </div>
-            <p class="gallery-continue">Continue exploring HODU</p>
-            <a href="#" class="btn-more">Show more</a>
         </section>
 
         <section id="location">
-            <h1>Where you'll be</h1>
-            <p>330, Cheomdan-ro, Jeju-si, Jeju-do, Republic of Korea</p>
+            <h2>Where you'll be</h2>
             <div id="map">
-                <!-- 여기에 지도 iframe 또는 지도 API를 사용하세요 -->
+                <!-- 지도 API 또는 iframe 삽입 위치 -->
             </div>
         </section>
 
         <section id="subscribe">
-            <div class="subscribe-flex">
-                <h1>Subscribe to our Blog post</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br />
-                    Lorem Ipsum has been the industry's standard dummy text </p>
-            </div>
-            <form>
-                <div class="email-box">
-                    <label for="email-input" class="email-label">
-                        <img src="./asset/svg/mail.svg" alt="e-mail">
-                        <input type="email" id="email-input" placeholder="Enter your e-mail address">
-                    </label>
-                    <button type="submit">Subscribe</button>
-                </div>
+            <h2>Subscribe to our Blog post</h2>
+            <form id="subscribe-form">
+                <input type="email" placeholder="Enter your e-mail address" required>
+                <button type="submit">Subscribe</button>
             </form>
         </section>
-
-        <!-- <section id="background-cat">
-            <img src="./asset/img/background_cat.png" alt="background-cat">
-        </section> -->
     </main>
 
     <footer>
-        <div id="background-cat">
-            <img src="./asset/img/background_cat.png" alt="background-cat">
-        </div>
         <div class="footer-content">
-            <img class="footer-logo" src="./asset/svg/Logo-fin.svg" alt="logo">
-            <div class="social-media">
-                <a href="https://velog.io/@s2dorns2/posts" class="social-icon"><img src="./asset/svg/icon-blog.svg" alt="Facebook"></a>
-                <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586&extra_1=s%7Cc%7C547419126422%7Ce%7Cinstagram%20%27%7C&placement=&creative=547419126422&keyword=instagram%20%27&partner_id=googlesem&extra_2=campaignid%3D13530338586%26adgroupid%3D126262418054%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-1321618851291%26loc_physical_ms%3D9197530%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gad_source=1&gclid=Cj0KCQjwt4a2BhD6ARIsALgH7Dqqnv3Ahowx20yBwoPFM2jSZDLof7U9p5m4RXTnvLBgqkasyGDcOL4aAtitEALw_wcB" class="social-icon"><img src="./asset/svg/icon-insta.svg" alt="Twitter"></a>
-                <a href="https://www.facebook.com/?locale=ko_KR" class="social-icon"><img src="./asset/svg/icon-facebook.svg" alt="Instagram"></a>
-                <a href="https://www.youtube.com/" class="social-icon"><img src="./asset/svg/icon-youtube.svg" alt="LinkedIn"></a>
+            <div class="logo">HODU</div>
+            <div class="social-links">
+                <a href="#" aria-label="Twitter"><i class="icon-twitter"></i></a>
+                <a href="#" aria-label="Facebook"><i class="icon-facebook"></i></a>
+                <a href="#" aria-label="Instagram"><i class="icon-instagram"></i></a>
+                <a href="#" aria-label="YouTube"><i class="icon-youtube"></i></a>
             </div>
         </div>
     </footer>
+
+    <button id="scroll-top" class="scroll-top-btn">
+        <img src="./asset/svg/keyboard_arrow_up.svg" alt="Scroll to top">
+    </button>
+
+    <div id="subscribe-modal" class="modal">
+        <div class="modal-content">
+            <h2>Thank you for subscribing!</h2>
+            <button id="modal-close">OK! I love HODU</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
