--- a/index.html
+++ b/index.html
@@ -106,16 +106,26 @@
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="logo">HODU</div>
+        <div class="footer-content container">
+            <div class="footer-logo">
+                <img src="./asset/svg/Logo-fin.svg"/>
+            </div>
             <div class="social-links">
-                <a href="#" aria-label="Twitter"><i class="icon-twitter"></i></a>
-                <a href="#" aria-label="Facebook"><i class="icon-facebook"></i></a>
-                <a href="#" aria-label="Instagram"><i class="icon-instagram"></i></a>
-                <a href="#" aria-label="YouTube"><i class="icon-youtube"></i></a>
+                <a href="https://velog.io/@s2dorns2/posts" class="social-icon">
+                    <img src="./asset/svg/icon-blog.svg" alt="Blog">
+                </a>
+                <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586" class="social-icon">
+                    <img src="./asset/svg/icon-insta.svg" alt="Instagram">
+                </a>
+                <a href="https://www.facebook.com/?locale=ko_KR" class="social-icon">
+                    <img src="./asset/svg/icon-facebook.svg" alt="Facebook">
+                </a>
+                <a href="https://www.youtube.com/" class="social-icon">
+                    <img src="./asset/svg/icon-youtube.svg" alt="YouTube">
+                </a>
             </div>
         </div>
-    </footer>
+    </footer>    
 
     <button id="scroll-top" class="scroll-top-btn">
         <img src="./asset/svg/keyboard_arrow_up.svg" alt="Scroll to top">
