--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>HODU</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" 
+    integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=25a6515ca67754804c14e11617b27ab7"></script>
 </head>
 <body>
     <header id="header">
@@ -142,5 +145,6 @@
     <script src="./js/emailCheck.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/headerFixer.js"></script>
+    <script src="./js/map.js"></script>
 </body>
 </html>
