HTML checking edit
웹 접근성 경고, 오류 수정

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>HODU</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" 
-    integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=25a6515ca67754804c14e11617b27ab7"></script>
 </head>
 <body>
@@ -15,7 +13,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="./asset/svg/Logo-fin.svg"/>
+                    <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
                 </div>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -39,7 +37,7 @@
                     <a href="#" class="btn-download">Download</a>
                 </div>
                 <div class="hero-image">
-                    <img src="./asset/img/intro_cat.png" alt="intro cat">
+                    <img src="./asset/img/intro_cat.png" alt="intro cat"/>
                 </div>
             </div>
         </section>
@@ -60,12 +58,12 @@
                 <p>Lorem Ipsum is simply <span>dummy text</span> of the printing and typesetting industry. <br />
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
                 <div class="gallery-grid spacebetween">
-                    <img src="./asset/img/gallery_cat1.png" alt="Cat 1">
-                    <img src="./asset/img/gallery_cat2.png" alt="Cat 2">
-                    <img src="./asset/img/gallery_cat3.png" alt="Cat 3">
-                    <img src="./asset/img/gallery_cat4.png" alt="Cat 4">
-                    <img src="./asset/img/gallery_cat5.png" alt="Cat 5">
-                    <img src="./asset/img/gallery_cat6.png" alt="Cat 6">
+                    <img src="./asset/img/gallery_cat1.png" alt="Cat 1"/>
+                    <img src="./asset/img/gallery_cat2.png" alt="Cat 2"/>
+                    <img src="./asset/img/gallery_cat3.png" alt="Cat 3"/>
+                    <img src="./asset/img/gallery_cat4.png" alt="Cat 4"/>
+                    <img src="./asset/img/gallery_cat5.png" alt="Cat 5"/>
+                    <img src="./asset/img/gallery_cat6.png" alt="Cat 6"/>
                 </div>
                 <div class="gallery-show flex flex-column center">
                     <span>Continue exploring HODU</span>
@@ -98,7 +96,7 @@
                     </div>
                     <form id="subscribe-form">
                         <label for="email-input" class="flex center">
-                            <img src="./asset/svg/mail.svg" alt="e-mail">
+                            <img src="./asset/svg/mail.svg" alt="e-mail"/>
                             <input type="email" id="email-input" placeholder="Enter your e-mail address">
                         </label>
                         <button type="button" id="subscribe-button">Subscribe</button>
@@ -118,27 +116,27 @@
     <footer>
         <div class="footer-content container">
             <div class="footer-logo">
-                <img src="./asset/svg/Logo-fin.svg"/>
+                <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
             </div>
             <div class="social-links">
                 <a href="https://velog.io/@s2dorns2/posts" class="social-icon">
-                    <img src="./asset/svg/icon-blog.svg" alt="Blog">
+                    <img src="./asset/svg/icon-blog.svg" alt="Blog"/>
                 </a>
                 <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586" class="social-icon">
-                    <img src="./asset/svg/icon-insta.svg" alt="Instagram">
+                    <img src="./asset/svg/icon-insta.svg" alt="Instagram"/>
                 </a>
                 <a href="https://www.facebook.com/?locale=ko_KR" class="social-icon">
-                    <img src="./asset/svg/icon-facebook.svg" alt="Facebook">
+                    <img src="./asset/svg/icon-facebook.svg" alt="Facebook"/>
                 </a>
                 <a href="https://www.youtube.com/" class="social-icon">
-                    <img src="./asset/svg/icon-youtube.svg" alt="YouTube">
+                    <img src="./asset/svg/icon-youtube.svg" alt="YouTube"/>
                 </a>
             </div>
         </div>
     </footer>    
 
     <button id="scroll-top" class="scroll-top-btn">
-        <img src="./asset/svg/keyboard_arrow_up.svg" alt="Scroll to top">
+        <img src="./asset/svg/keyboard_arrow_up.svg" alt="Scroll to top"/>
     </button>
 
     <script src="./js/emailCheck.js"></script>
