--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </header>
 
     <main>
-        <section id="hero">
-            <div class="container hero-grid">
-                <div class="hero-content flex flex-column">
+        <section id="intro">
+            <div class="container intro-grid">
+                <div class="intro-content flex flex-column">
                     <h1>Lorem Ipsum is simply<br /> dummy text of the printing and</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. <br/>
@@ -36,7 +36,7 @@
                         ever since the 1500s, when an unknown</p>
                     <a href="#" class="btn-download">Download</a>
                 </div>
-                <div class="hero-image">
+                <div class="intro-image">
                     <img src="./asset/img/intro_cat.png" alt="intro cat"/>
                 </div>
             </div>
@@ -102,9 +102,15 @@
                         <button type="button" id="subscribe-button">Subscribe</button>
                     
                         <div id="subscribe-modal" class="modal">
-                            <div class="modal-content">
-                                <h2>Thank you for subscribing!</h2>
-                                <button type="submit" id="modal-close">OK! I love HODU</button>
+                            <div class="modal-content center flex flex-column">
+                                <div class="modal-img">
+                                    <img src="./asset/img/modal_cat.png" alt="HODU Thanks"/>
+                                </div>
+                                <h2>Thank you!</h2>
+                                <p>Lorem Ipsum is simply dummy text of the printing industry. </p>
+                                <div class="modal-button-box">
+                                    <button type="submit" id="modal-close">OK! I love HODU</button>
+                                </div>
                             </div>
                         </div>
                     </form>
