--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HODU</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles-responsive.css">
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=25a6515ca67754804c14e11617b27ab7"></script>
 </head>
 <body>
@@ -34,7 +35,7 @@
                         typesetting industry. <br/>
                         Lorem Ipsum has been the industry's standard dummy text
                         ever since the 1500s, when an unknown</p>
-                    <a href="#" class="btn-download">Download</a>
+                    <a href="#" class="btn-download-intro">Download</a>
                 </div>
                 <div class="intro-image">
                     <img src="./asset/img/intro_cat.png" alt="intro cat"/>
