--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
                 <div class="logo">
                     <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
                 </div>
-                <ul>
+                <ul class="navbar-menu">
+                    <li>
+                        <a href="#" class="navbar-toggleClose" onclick="toggleMenu()">
+                            <img alt="menu toggle close" src="./asset/svg/arrow-right.svg"/>
+                        </a>
+                    </li>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#support">Support</a></li>
                     <li><a href="#" class="btn-download">Download</a></li>
                 </ul>
+                <a href="#" class="navbar-togglebtn" onclick="toggleMenu()">
+                    <img alt="menu hamburger" src="./asset/svg/menu.svg"/>
+                </a>
             </nav>
         </div>
     </header>
@@ -152,6 +160,7 @@
         <img src="./asset/svg/keyboard_arrow_up.svg" alt="Scroll to top"/>
     </button>
 
+    <script src="./js/toggleMenu.js"></script>
     <script src="./js/emailCheck.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/headerFixer.js"></script>
