--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <ul class="navbar-menu">
                     <li>
-                        <a href="#" class="navbar-toggleClose" onclick="toggleMenu()">
+                        <a href="#" class="navbar-toggleClose-btn" onclick="toggleMenu()">
                             <img alt="menu toggle close" src="./asset/svg/arrow-right.svg"/>
                         </a>
                     </li>
@@ -135,24 +135,34 @@
     </main>
 
     <footer>
-        <div class="footer-content container">
-            <div class="footer-logo">
-                <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
+        <div class="mobile-footer-content">
+            <div class="footer-content container">
+                <div class="footer-logo">
+                    <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
+                </div>
+                <div class="social-links">
+                    <a href="https://velog.io/@s2dorns2/posts" class="social-icon">
+                        <img src="./asset/svg/icon-blog.svg" alt="Blog"/>
+                    </a>
+                    <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586" class="social-icon">
+                        <img src="./asset/svg/icon-insta.svg" alt="Instagram"/>
+                    </a>
+                    <a href="https://www.facebook.com/?locale=ko_KR" class="social-icon">
+                        <img src="./asset/svg/icon-facebook.svg" alt="Facebook"/>
+                    </a>
+                    <a href="https://www.youtube.com/" class="social-icon">
+                        <img src="./asset/svg/icon-youtube.svg" alt="YouTube"/>
+                    </a>
+                </div>
             </div>
-            <div class="social-links">
-                <a href="https://velog.io/@s2dorns2/posts" class="social-icon">
-                    <img src="./asset/svg/icon-blog.svg" alt="Blog"/>
-                </a>
-                <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586" class="social-icon">
-                    <img src="./asset/svg/icon-insta.svg" alt="Instagram"/>
-                </a>
-                <a href="https://www.facebook.com/?locale=ko_KR" class="social-icon">
-                    <img src="./asset/svg/icon-facebook.svg" alt="Facebook"/>
-                </a>
-                <a href="https://www.youtube.com/" class="social-icon">
-                    <img src="./asset/svg/icon-youtube.svg" alt="YouTube"/>
-                </a>
-            </div>
+            <!-- <div class="mobile-link"> -->
+                <ul class="mobile-link">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                </ul>
+            <!-- </div> -->
         </div>
     </footer>    
 
