--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <button type="button" id="subscribe-button" class="desktop-btn">Subscribe</button>
                         </div>
                         <div class="mobile-btn-box">
-                            <button type="button" id="subscribe-button" class="mobile-btn">Subscribe</button>
+                            <button type="button" id="subscribe-button-mobile" class="mobile-btn">Subscribe</button>
                         </div>
                         
 
