code review applied
html 헤더 표시
scroll-top 390이하에서 안보이게

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header id="header">
         <div class="container">
             <nav>
-                <div class="logo">
+                <h1 class="logo">
                     <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
-                </div>
+                </h1>
                 <ul class="navbar-menu">
                     <li>
                         <a href="#" class="navbar-toggleClose-btn" onclick="toggleMenu()">
@@ -28,7 +28,7 @@
                     <li><a href="#" class="btn-download">Download</a></li>
                 </ul>
                 <a href="#" class="navbar-togglebtn" onclick="toggleMenu()">
-                    <img alt="menu hamburger" src="./asset/svg/menu.svg"/>
+                    <img alt="menu toggle button" src="./asset/svg/menu.svg"/>
                 </a>
             </nav>
         </div>
@@ -38,7 +38,7 @@
         <section id="intro">
             <div class="container intro-grid">
                 <div class="intro-content flex flex-column">
-                    <h1>Lorem Ipsum is simply<br /> dummy text of the printing and</h1>
+                    <h2>Lorem Ipsum is simply<br /> dummy text of the printing and</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. <br/>
                         Lorem Ipsum has been the industry's standard dummy text
@@ -46,14 +46,14 @@
                     <a href="#" class="btn-download-intro">Download</a>
                 </div>
                 <div class="intro-image">
-                    <img src="./asset/img/intro_cat.png" alt="intro cat"/>
+                    <img src="./asset/img/intro_cat.png" alt="상자를 쓰고있는 HODU"/>
                 </div>
             </div>
         </section>
 
         <section id="features">
             <div class="container feature grid spacebetween">
-                <img src="./asset/img/feature_cat.png" alt="feature cat">
+                <img src="./asset/img/feature_cat.png" alt="누워있는 HODU">
                 <div class="feature-content flex flex-column">
                     <h2>Lorem Ipsum is simply<br /> dummy text of the printing and dummy text</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -67,12 +67,12 @@
                 <p>Lorem Ipsum is simply <span>dummy text</span> of the printing and typesetting industry. <br />
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
                 <div class="gallery-grid spacebetween">
-                    <img src="./asset/img/gallery_cat1.png" alt="Cat 1"/>
-                    <img src="./asset/img/gallery_cat2.png" alt="Cat 2"/>
-                    <img src="./asset/img/gallery_cat3.png" alt="Cat 3"/>
-                    <img src="./asset/img/gallery_cat4.png" alt="Cat 4"/>
-                    <img src="./asset/img/gallery_cat5.png" alt="Cat 5"/>
-                    <img src="./asset/img/gallery_cat6.png" alt="Cat 6"/>
+                    <img src="./asset/img/gallery_cat1.png" alt="캣타워에 올라가 있는 HODU"/>
+                    <img src="./asset/img/gallery_cat2.png" alt="벽을 바라보고 있는 HODU"/>
+                    <img src="./asset/img/gallery_cat3.png" alt="앉아있는 HODU"/>
+                    <img src="./asset/img/gallery_cat4.png" alt="바라보고 있는 HODU"/>
+                    <img src="./asset/img/gallery_cat5.png" alt="서있는 HODU"/>
+                    <img src="./asset/img/gallery_cat6.png" alt="하품하는 HODU"/>
                 </div>
                 <div class="gallery-show flex flex-column center">
                     <span>Continue exploring HODU</span>
@@ -90,7 +90,6 @@
                 <h2>Where you'll be</h2>
                 <p>330, Cheomdan-ro, Jeju-si, Jeju-do, Republic of Korea</p>
                 <div id="map">
-                    <!-- 지도 API 또는 iframe 삽입 위치 -->
                 </div>
             </div>
         </section>
