css_test: modify done
최종 수정

--- a/index.html
+++ b/index.html
@@ -16,22 +16,20 @@
                 <h1 class="logo">
                     <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
                 </h1>
-                <div class="navbar-menu">
-                    <ul>
-                        <li>
-                            <button class="navbar-toggleClose-btn" onclick="toggleMenu()">
-                                <img alt="menu toggle close" src="./asset/svg/arrow-right.svg"/>
-                            </button>
-                        </li>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#support">Support</a></li>
-                    </ul>
-                    <a href="#" class="btn-download">Download</a>
-                </div>
-                <button class="navbar-togglebtn" onclick="toggleMenu()">
+                <ul class="navbar-menu">
+                    <li>
+                        <a href="#" class="navbar-toggleClose-btn" onclick="toggleMenu()">
+                            <img alt="menu toggle close" src="./asset/svg/arrow-right.svg"/>
+                        </a>
+                    </li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#support">Support</a></li>
+                    <li><a href="#" class="btn-download">Download</a></li>
+                </ul>
+                <a href="#" class="navbar-togglebtn" onclick="toggleMenu()">
                     <img alt="menu toggle button" src="./asset/svg/menu.svg"/>
-                </button>
+                </a>
             </nav>
         </div>
     </header>
@@ -64,7 +62,7 @@
         </section>
 
         <section id="gallery">
-            <div class="container flex flex-column">
+            <div class="container flex flex-column center">
                 <h2>dummy text of the printing and dummy</h2>
                 <p>Lorem Ipsum is simply <span>dummy text</span> of the printing and typesetting industry. <br />
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
@@ -76,7 +74,7 @@
                     <img src="./asset/img/gallery_cat5.png" alt="서있는 HODU"/>
                     <img src="./asset/img/gallery_cat6.png" alt="하품하는 HODU"/>
                 </div>
-                <div class="gallery-show flex flex-column center">
+                <div class="gallery-show">
                     <span>Continue exploring HODU</span>
                     <a href="#" class="btn-more">Show more</a>
                 </div>
