mobile css modified

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
 
         <section id="features">
-            <div class="container feature grid spacebetween">
+            <div class="container feature">
                 <img src="./asset/img/feature_cat.png" alt="누워있는 HODU">
                 <div class="feature-content flex flex-column">
                     <h2>Lorem Ipsum is simply<br /> dummy text of the printing and dummy text</h2>
