--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <img src="./asset/svg/Logo-fin.svg" alt="HODU"/>
                 </div>
                 <div class="social-links">
-                    <a href="https://velog.io/@s2dorns2/posts" class="social-icon">
+                    <a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0" class="social-icon">
                         <img src="./asset/svg/icon-blog.svg" alt="Blog"/>
                     </a>
                     <a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586" class="social-icon">
